--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,15 @@
     "types": ["react-native"],
     "allowJs": true,    
     "esModuleInterop": true,
-    "moduleResolution": "NodeNext"
+    "moduleResolution": "NodeNext",
+    "skipLibCheck": true,
+    "importHelpers": true,
+    "noImplicitAny": false,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noFallthroughCasesInSwitch": true,
   },
   "exclude": [
     "node_modules",
